devops/k8s/base/admin-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-server
  namespace: dev
  labels:
    app: admin-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-server
  template:
    metadata:
      labels:
        app: admin-server
    spec:
      imagePullSecrets:
        - name: nexus-registry-secret
      containers:
        - name: admin-server
          image: nexus:8081/docker-hosted/dev/admin-server:0.1.1
          imagePullPolicy: Always
          ports:
            - containerPort: 9090
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 9090
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 9090
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 9090
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
