devops/k8s/base/visits-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visits-service
  namespace: dev
  labels:
    app: visits-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: visits-service
  template:
    metadata:
      labels:
        app: visits-service
    spec:
      imagePullSecrets:
        - name: nexus-registry-secret
      containers:
        - name: visits-service
          image: nexus:8081/docker-hosted/dev/visits-service:0.1.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
