devops/k8s/base/admin-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-server
  namespace: dev
  labels:
    app: admin-server
spec:
  type: ClusterIP
  selector:
    app: admin-server
  ports:
    - port: 9090
      targetPort: 9090
