devops/k8s/base/config-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: config-server
  namespace: dev
  labels:
    app: config-server
spec:
  type: ClusterIP
  selector:
    app: config-server
  ports:
    - port: 8888
      targetPort: 8888
