devops/k8s/base/customers-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customers-service
  namespace: dev
  labels:
    app: customers-service
spec:
  type: ClusterIP
  selector:
    app: customers-service
  ports:
    - port: 8081
      targetPort: 8081
