devops/k8s/base/discovery-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: discovery-server
  namespace: dev
  labels:
    app: discovery-server
spec:
  type: ClusterIP
  selector:
    app: discovery-server
  ports:
    - port: 8761
      targetPort: 8761
