devops/k8s/base/vets-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vets-service
  namespace: dev
  labels:
    app: vets-service
spec:
  type: ClusterIP
  selector:
    app: vets-service
  ports:
    - port: 8083
      targetPort: 8083
