devops/k8s/base/visits-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: visits-service
  namespace: dev
  labels:
    app: visits-service
spec:
  type: ClusterIP
  selector:
    app: visits-service
  ports:
    - port: 8082
      targetPort: 8082
